data/all_generated_tests/raw_wast_tests/br_if_StackCorruption_1452.wast
;; 3. **Test Description**: Implement a scenario where a series of nested blocks perform `br_if` instructions such that one conditional branch drains all the operands, leaving insufficient operands for the next conditional branch.   - **Constraint Being Checked**: Enforcement of stack requirements after conditions in a sequence of conditionals.   - **Stack Corruption Aspect**: Conditional branching improperly handled would corrupt the stack, leaving it shorter than expected for the next operation.

(assert_invalid
  (module
    (func
      (block (result i32)
        (i32.const 1)
        (block (result i32)
          (i32.const 2)
          (br_if 0 (i32.const 0))
          (br_if 0 (i32.const 1))
        )
        i32.add
      )
    )
  )
  "type mismatch"
)